minireel-templates/mobile/css/mobile__player.css
@font-face {
  font-family: 'fontello';
  src: url('../fonts/SocialIcons/font/fontello.eot'); /* IE9 Compat Modes */
  src: url('../fonts/SocialIcons/font/fontello.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/SocialIcons/font/fontello.woff') format('woff'), /* Pretty Modern Browsers */
       url('../fonts/SocialIcons/font/fontello.ttf')  format('truetype'), /* Safari, Android, iOS */
       url('../fonts/SocialIcons/font/fontello.svg#svgfontello') format('svg'); /* Legacy iOS */
}

body {
    background:#ddd;
}

    button {
        font-size:1rem;
        margin:0; border:0; padding:0;
        display: inline-block;
        cursor:pointer;
        background:none;
    }

    button::-moz-focus-inner {
        padding: 0;
        border: 0;
    }

    .card__group {
        position:absolute;
        top:0.75em;
        left:0.75em;
        right:0.75em;
        background:#fff;
        box-shadow: 0 0 3px 3px rgba(0,0,0,.12);
        border-bottom:1em solid #ddd;
        margin:0 0 1em;
    }

    .sponsor__group {
        width:3.5em;
        height:3.5em;
        overflow:hidden;
        float:left;
        border:1px solid #ddd;
        margin:0 0.5em 0 0;
    }

        .sponsor__logo img {
            width:100%;
            height:100%;
        }

    .sponsor__label {
        display:inline;
        text-align:left;
        color:#999;
        font-size:0.75em;
        margin:0 0.25em 0 0;
        font-family:"Open Sans", arial, helvetica, sans-serif;
        float:left;
    }

    .sponsor__name {
        display: inline;
        font-family:"Open Sans", sans-serif;
        font-size:0.75em;
        color:#d94040;
        float:left;
    }

    .sidebar__group {
        display:block;
        background:#eee;
    }

        .social__group {
            height:1.75em;
            padding:0.75em;
            border-bottom:1px solid #dedede;
            width:auto;
            text-align:center;
        }

        .social__group--icon {
            display:block;
            margin:0 auto 0.375em;
            border-radius:4px;
            text-shadow:0 0 1px rgba(0,0,0,0.6);
            text-rendering: optimizeLegibility;
            text-decoration:none;
        }

            .social__group--facebook {
                background:#2f478b;
            }

            .social__group--twitter {
                background:#30a2ef;
            }

            .social__group--pinterest {
                background:#b00d18;
            }

            .social__group--instagram {
                background:#194579;
            }

            .social__group--vimeo {
                background:#1ab7ea;
            }

            .social__group--youtube {
                background:#e52d27;
            }

            .social__group--share {
                background:#256c35;
            }

            

            .socialIconFont {
                width: 1.75em;
                height: 1.75em;
                display:block;
                margin:0 auto;
                text-align:left;
                position:relative;

            }

                .socialIconFont:before {
                    font-family:"fontello";
                    font-style:normal;
                    font-weight:normal;
                    font-size:1rem;
                    speak:none;
                    display:inline-block;
                    text-decoration:inherit;
                    width:1em;
                    text-align:center;
                    color:#fff;
                    position:absolute;
                    top:0.3125em;
                    left:0.375em;
                }

                    .social__group--facebook .socialIconFont:before {
                        content:'\e804';
                        margin:0.0625em 0 0;
                    }

                    .social__group--twitter .socialIconFont:before {
                        content:'\e806';
                    }

                    .social__group--pinterest .socialIconFont:before {
                        content:'\e802';
                        margin:0.0625em 0 0;
                    }

                    .social__group--instagram .socialIconFont:before {
                        content:'\e803';
                    }

                    .social__group--vimeo .socialIconFont:before {
                        content:'\e807';
                        font-size:0.9375em;
                        margin:0.125em 0 0;
                    }

                    .social__group--youtube .socialIconFont:before {
                        content:'\e805';
                    }

                    .social__group--share .socialIconFont:before {
                        content:'\e808';
                    }

                    .social__label {
                        display:none;
                    }

    

        .social__media,
        .social__share {
            margin:0;
            padding:0;
            display:inline-block;
        }

            .social__media li {
                margin:0 0.75em 0 0;
            }

            .social__media li,
            .social__share li {
                display:block;
                float:left;
            }




    .video__group {
        position:relative;
        width:100%;
        padding:0 0 56.25%;
    }

        .video__player {
            position: absolute;
            top:0;
            right:0;
            width:100%;
            height:100%;
        }


    .description__group {
    }

          
        .description__container {
            padding:0 1rem 1rem;
        }

            .description__container p {
                font-family:"Open Sans", arial, helvetica, sans-serif;
                font-size:1rem;
                line-height:1.5;
                margin:0;
                color:#545454;
            }
/* ... */

